--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </div>
     <!-- popup -->
     <div id="popup"><span class="close"> <a href="#"><img src="./images/close.svg" alt="닫기버튼"></a></span></div>
+    <div class="bg"></div>
 </body>
 
 </html>
